--- a/index.html
+++ b/index.html
@@ -31,6 +31,113 @@
     <link rel="stylesheet" href="styles/main.css" />
   </head>
   <body>
+    <!-- This is a template HTML for a post item -->
+    <template id="postItemTemplate">
+      <li class="col-12 col-md-6 col-lg-4">
+        <div class="post-item mb-4">
+          <div class="card">
+            <img data-id="thumbnail" src="images/recipe.jpg" class="card-img-top" alt="recipe" />
+
+            <div class="card-body">
+              <h5 data-id="title" class="card-title">Card title</h5>
+
+              <p data-id="description" class="card-text">
+                This is a wider card with supporting text below as a natural lead-in to additional
+                content. This content is a little bit longer.
+              </p>
+
+              <p class="card-text">
+                <small class="text-muted">by</small>
+                <small data-id="author" class="text-muted font-weight-bold"> Hau Nguyen </small>
+                <small data-id="timeSpan" class="text-muted"> - 3 mins ago </small>
+              </p>
+            </div>
+          </div>
+
+          <div data-id="menu" class="post-item-menu">
+            <div data-id="edit" class="menu-item rounded-circle" role="button">
+              <i class="fas fa-pen"></i>
+            </div>
+            <div data-id="remove" class="remove-button menu-item rounded-circle" role="button">
+              <i class="fas fa-trash"></i>
+            </div>
+          </div>
+        </div>
+      </li>
+    </template>
+
+    <header>
+      <!-- Navigation
+        - Please note that we use an empty item to make sure that we always have 3 flex-items
+          so logo is at centered, and the left and the right item can be optional by leaving it empty
+      -->
+      <nav class="top-nav py-3">
+        <div class="container">
+          <ul class="nav justify-content-between align-items-center">
+            <li class="nav-item">
+              <a class="nav__link" href="">
+                <img class="nav__logo" src="images/favicon.png" alt="Moonside" />
+              </a>
+            </li>
+
+            <li class="nav-item">
+              <a class="nav__link" href="add-edit-post.html"
+                ><i class="fas fa-plus-circle me-2"></i>Add new post</a
+              >
+            </li>
+          </ul>
+        </div>
+      </nav>
+    </header>
+    <main>
+      <section class="posts-section">
+        <div class="container">
+          <h1 class="with-underline text-center">Latest posts</h1>
+          <!-- Post list -->
+          <ul id="postList" class="row posts-list justify-content-center ps-0">
+            <!-- <li class="col-12 col-md-6 col-lg-4">
+              <div class="post-item mb-4">
+                <div class="card">
+                  <img
+                    src="images/recipe.jpg"
+                    class="card-img-top"
+                    alt="recipe"
+                    onerror="this.onerror=null;this.src='https://picsum.photos/1368/400';"
+                  />
+
+                  <div class="card-body">
+                    <h5 class="card-title">Card title</h5>
+
+                    <p class="card-text">
+                      This is a wider card with supporting text below as a natural lead-in to
+                      additional content. This content is a little bit longer.
+                    </p>
+
+                    <p class="card-text">
+                      <small class="text-muted">by</small>
+                      <small class="text-muted font-weight-bold">Hau Nguyen</small>
+                      <small class="text-muted">- 3 mins ago</small>
+                    </p>
+                  </div>
+                </div>
+
+                <div class="post-item-menu">
+                  <div class="menu-item rounded-circle">
+                    <i class="fas fa-pen"></i>
+                  </div>
+                  <div class="menu-item rounded-circle">
+                    <i class="fas fa-trash"></i>
+                  </div>
+                </div>
+              </div>
+            </li> -->
+          </ul>
+        </div>
+      </section>
+    </main>
+    <footer class="text-center text-muted py-3">
+      <small>Created by duy123a with <i class="fas fa-heart"></i></small>
+    </footer>
     <!-- JavaScript Bundle with Popper -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
