add axiosClient for postApi

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   <body>
     <!-- This is a template HTML for a post item -->
     <template id="postItemTemplate">
-      <li class="col-12 col-md-6 col-lg-4">
+      <li class="col-12 col-md-6 col-lg-4 col-xl-3">
         <div class="post-item mb-4">
           <div class="card">
             <img data-id="thumbnail" src="images/recipe.jpg" class="card-img-top" alt="recipe" />
@@ -173,7 +173,7 @@
           </div>
           <!-- Post list -->
           <ul id="postList" class="row posts-list justify-content-center ps-0">
-            <!-- <li class="col-12 col-md-6 col-lg-4">
+            <li class="col-12 col-md-6 col-lg-4 col-xl-3">
               <div class="post-item mb-4">
                 <div class="card">
                   <img
@@ -208,7 +208,7 @@
                   </div>
                 </div>
               </div>
-            </li> -->
+            </li>
           </ul>
         </div>
       </section>
