--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
           </nav>
 
           <!-- Modal -->
-          <div id="delete-modal" class="modal" tabindex="-1">
+          <div id="deletePostModal" class="modal" tabindex="-1">
             <div class="modal-dialog">
               <div class="modal-content">
                 <div class="modal-header">
