--- a/index.html
+++ b/index.html
@@ -75,14 +75,14 @@
         <div class="container">
           <ul class="nav justify-content-between align-items-center">
             <li class="nav-item">
-              <a class="nav__link" href="">
+              <a class="nav__link" href=".">
                 <img class="nav__logo" src="images/favicon.png" alt="Moonside" />
               </a>
             </li>
 
             <li class="nav-item">
               <a class="nav__link" href="add-edit-post.html"
-                ><i class="fas fa-plus-circle me-2"></i>Add new post</a
+                ><i class="fas fa-plus-circle me-2 can-rotate"></i>Add new post</a
               >
             </li>
           </ul>
@@ -120,33 +120,40 @@
             </div>
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img
-                  src="https://picsum.photos/id/1000/1378/400"
-                  class="d-block w-100"
-                  alt="First picture"
-                />
+                <div class="carousel-ratio">
+                  <img
+                    src="https://picsum.photos/id/1000/1378/400"
+                    class="d-block w-100"
+                    alt="First picture"
+                  />
+                </div>
                 <div class="carousel-caption d-none d-md-block">
                   <h5>First slide label</h5>
                   <p>Some representative placeholder content for the first slide.</p>
                 </div>
               </div>
               <div class="carousel-item">
-                <img
-                  src="https://picsum.photos/id/100/1378/400"
-                  class="d-block w-100"
-                  alt="Second picture"
-                />
+                <!-- Custom class which helps CLS rating -->
+                <div class="carousel-ratio">
+                  <img
+                    src="https://picsum.photos/id/100/1378/400"
+                    class="d-block w-100"
+                    alt="Second picture"
+                  />
+                </div>
                 <div class="carousel-caption d-none d-md-block">
                   <h5>Second slide label</h5>
                   <p>Some representative placeholder content for the second slide.</p>
                 </div>
               </div>
               <div class="carousel-item">
-                <img
-                  src="https://picsum.photos/id/1004/1378/400"
-                  class="d-block w-100"
-                  alt="Third picture"
-                />
+                <div class="carousel-ratio">
+                  <img
+                    src="https://picsum.photos/id/1004/1378/400"
+                    class="d-block w-100"
+                    alt="Third picture"
+                  />
+                </div>
                 <div class="carousel-caption d-none d-md-block">
                   <h5>Third slide label</h5>
                   <p>Some representative placeholder content for the third slide.</p>
@@ -244,38 +251,48 @@
               </li>
             </ul>
           </nav>
-
-          <!-- Modal -->
-          <div id="deletePostModal" class="modal" tabindex="-1">
-            <div class="modal-dialog">
-              <div class="modal-content">
-                <div class="modal-header">
-                  <h5 class="modal-title">Delete post</h5>
-                  <button
-                    type="button"
-                    class="btn-close"
-                    data-bs-dismiss="modal"
-                    aria-label="Close"
-                  ></button>
-                </div>
-                <div class="modal-body">
-                  <p>Modal body text goes here.</p>
-                </div>
-                <div class="modal-footer">
-                  <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">
-                    Close
-                  </button>
-                  <button type="button" class="btn btn-primary" data-id="confirm">Yes</button>
-                </div>
-              </div>
-            </div>
-          </div>
         </div>
       </section>
     </main>
     <footer class="text-center text-muted py-3">
-      <small>Created by duy123a with <i class="fas fa-heart"></i></small>
+      <small
+        >Created by <a href="https://github.com/duy123a/moonside" target="_blank">duy123a</a> with
+        <i class="fas fa-heart"></i
+      ></small>
+      <br />
+      <small
+        >Content is available under
+        <a href="https://creativecommons.org/licenses/by-nc-sa/4.0/" target="_blank"
+          >Creative Commons Attribution-NonCommercial-ShareAlike</a
+        >
+        unless otherwise noted.</small
+      >
     </footer>
+
+    <!-- Modal -->
+    <div id="deletePostModal" class="modal fade" tabindex="-1">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title">Delete post</h5>
+            <button
+              type="button"
+              class="btn-close"
+              data-bs-dismiss="modal"
+              aria-label="Close"
+            ></button>
+          </div>
+          <div class="modal-body">
+            <p>Modal body text goes here.</p>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+            <button type="button" class="btn btn-primary" data-id="confirm">Yes</button>
+          </div>
+        </div>
+      </div>
+    </div>
+
     <!-- JavaScript Bundle with Popper -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
