--- a/post-detail.html
+++ b/post-detail.html
@@ -147,23 +147,25 @@
 
     <!-- Modal -->
     <div id="lightbox" class="modal fade" tabindex="-1">
-      <div class="modal-dialog">
+      <div class="modal-dialog modal-dialog-centered modal-xl">
         <div class="modal-content">
-          <div class="modal-header">
-            <h5 class="modal-title">Delete post</h5>
-            <button
-              type="button"
-              class="btn-close"
-              data-bs-dismiss="modal"
-              aria-label="Close"
-            ></button>
-          </div>
           <div class="modal-body">
-            <p>Modal body text goes here.</p>
-          </div>
-          <div class="modal-footer">
-            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-            <button type="button" class="btn btn-primary" data-id="confirm">Yes</button>
+            <img data-id="lightboxImg" src="" alt="lightbox" width="100%" />
+            <div class="text-center mt-3">
+              <button data-id="lightboxPrev" type="button" class="btn btn-secondary btn-sm">
+                Prev
+              </button>
+              <button data-id="lightboxNext" type="button" class="btn btn-secondary btn-sm">
+                Next
+              </button>
+              <button
+                type="button"
+                class="btn btn-secondary btn-sm float-end"
+                data-bs-dismiss="modal"
+              >
+                Close
+              </button>
+            </div>
           </div>
         </div>
       </div>
