--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         - Please note that we use an empty item to make sure that we always have 3 flex-items
           so logo is at centered, and the left and the right item can be optional by leaving it empty
       -->
-      <nav class="top-nav py-3">
+      <nav class="top-nav py-3 custom-shadow">
         <div class="container">
           <ul class="nav justify-content-between align-items-center">
             <li class="nav-item">
