--- a/index.html
+++ b/index.html
@@ -241,9 +241,15 @@
                   <span aria-hidden="true">&laquo; Prev</span>
                 </a>
               </li>
-              <!-- <li class="page-item"><a class="page-link" href="#">1</a></li>
-              <li class="page-item"><a class="page-link" href="#">2</a></li>
-              <li class="page-item"><a class="page-link" href="#">3</a></li> -->
+              <li class="page-item first-page"><a class="page-link" href="#"></a></li>
+              <span class="px-3 align-self-end first-span">...</span>
+              <li class="page-item dynamic-page"><a class="page-link" href="#"></a></li>
+              <li class="page-item dynamic-page"><a class="page-link" href="#"></a></li>
+              <li class="page-item dynamic-page"><a class="page-link" href="#"></a></li>
+              <li class="page-item dynamic-page"><a class="page-link" href="#"></a></li>
+              <li class="page-item dynamic-page"><a class="page-link" href="#"></a></li>
+              <span class="px-3 align-self-end last-span">...</span>
+              <li class="page-item last-page"><a class="page-link" href="#"></a></li>
               <li class="page-item">
                 <a class="page-link" href="#" aria-label="Next">
                   <span aria-hidden="true">Next &raquo;</span>
