update meta tag

--- a/index.html
+++ b/index.html
@@ -6,6 +6,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Moonside</title>
 
+    <!-- Primary Meta Tags -->
+    <title>Moonside</title>
+    <meta name="title" content="Moonside" />
+    <meta name="description" content="Welcome to Moonside!" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://moonside.vercel.app/" />
+    <meta property="og:title" content="Moonside" />
+    <meta property="og:description" content="Welcome to Moonside!" />
+    <meta property="og:image" content="https://moonside.vercel.app/images/thumbnail.webp" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://moonside.vercel.app/" />
+    <meta property="twitter:title" content="Moonside" />
+    <meta property="twitter:description" content="Welcome to Moonside!" />
+    <meta property="twitter:image" content="https://moonside.vercel.app/images/thumbnail.webp" />
+
     <link rel="shortcut icon" href="images/favicon.png" type="image/png" />
 
     <!-- Bootstrap CSS -->
