change meta img from webp to jpg

--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
     <meta property="og:url" content="https://moonside.vercel.app/" />
     <meta property="og:title" content="Moonside" />
     <meta property="og:description" content="Welcome to Moonside!" />
-    <meta property="og:image" content="https://moonside.vercel.app/thumbnail.webp" />
+    <meta property="og:image" content="https://moonside.vercel.app/thumbnail.jpg" />
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
     <meta property="twitter:url" content="https://moonside.vercel.app/" />
     <meta property="twitter:title" content="Moonside" />
     <meta property="twitter:description" content="Welcome to Moonside!" />
-    <meta property="twitter:image" content="https://moonside.vercel.app/thumbnail.webp" />
+    <meta property="twitter:image" content="https://moonside.vercel.app/thumbnail.jpg" />
 
     <link rel="shortcut icon" href="images/favicon.png" type="image/png" />
 
