--- a/index.html
+++ b/index.html
@@ -259,15 +259,15 @@
                   <span aria-hidden="true">&laquo; Prev</span>
                 </a>
               </li>
-              <li class="page-item first-page"><a class="page-link" href="#"></a></li>
+              <li class="page-item first-page"><a class="page-link" href="#">L</a></li>
               <span class="px-3 align-self-end first-span">...</span>
-              <li class="page-item dynamic-page"><a class="page-link" href="#"></a></li>
-              <li class="page-item dynamic-page"><a class="page-link" href="#"></a></li>
-              <li class="page-item dynamic-page"><a class="page-link" href="#"></a></li>
-              <li class="page-item dynamic-page"><a class="page-link" href="#"></a></li>
-              <li class="page-item dynamic-page"><a class="page-link" href="#"></a></li>
+              <li class="page-item dynamic-page"><a class="page-link" href="#">O</a></li>
+              <li class="page-item dynamic-page"><a class="page-link" href="#">A</a></li>
+              <li class="page-item dynamic-page"><a class="page-link" href="#">D</a></li>
+              <li class="page-item dynamic-page"><a class="page-link" href="#">I</a></li>
+              <li class="page-item dynamic-page"><a class="page-link" href="#">N</a></li>
               <span class="px-3 align-self-end last-span">...</span>
-              <li class="page-item last-page"><a class="page-link" href="#"></a></li>
+              <li class="page-item last-page"><a class="page-link" href="#">G</a></li>
               <li class="page-item">
                 <a class="page-link" href="#" aria-label="Next">
                   <span aria-hidden="true">Next &raquo;</span>
