--- a/add-edit-post.html
+++ b/add-edit-post.html
@@ -27,6 +27,9 @@
     <!-- Use font Rubik -->
     <link href="https://fonts.googleapis.com/css?family=Rubik&display=swap" rel="stylesheet" />
 
+    <!-- Includes Quill stylesheets -->
+    <link href="https://cdn.quilljs.com/1.3.6/quill.snow.css" rel="stylesheet" />
+
     <!-- Internal CSS -->
     <link rel="stylesheet" href="styles/main.css" />
   </head>
@@ -92,7 +95,8 @@
 
               <div class="form-group mb-3">
                 <label for="postDescription">Description</label>
-                <textarea class="form-control" name="description" rows="3"></textarea>
+                <!-- <textarea class="form-control" name="description" rows="3" hidden></textarea> -->
+                <div class="form-control" id="editor"></div>
               </div>
 
               <div class="mb-3">
@@ -185,6 +189,16 @@
       integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
       crossorigin="anonymous"
     ></script>
+
+    <!-- Include the Quill library -->
+    <script src="https://cdn.quilljs.com/1.3.6/quill.js"></script>
+
+    <!-- Initialize Quill editor -->
+    <script>
+      var quill = new Quill('#editor', {
+        theme: 'snow',
+      });
+    </script>
 
     <!-- Scripts should be placed here to prevent blocking render UI -->
     <script type="module" src="js/add-edit-post.js"></script>
