--- a/post-detail.html
+++ b/post-detail.html
@@ -27,6 +27,9 @@
     <!-- Use font Rubik -->
     <link href="https://fonts.googleapis.com/css?family=Rubik&display=swap" rel="stylesheet" />
 
+    <!-- Includes Quill stylesheets -->
+    <link href="https://cdn.quilljs.com/1.3.6/quill.snow.css" rel="stylesheet" />
+
     <!-- Internal CSS -->
     <link rel="stylesheet" href="styles/main.css" />
   </head>
@@ -69,7 +72,8 @@
             </div>
 
             <div class="post-content-wrapper">
-              <p id="postDetailDescription"></p>
+              <div id="editor" hidden></div>
+              <div id="postDetailDescription"></div>
 
               <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Non totam pariatur
@@ -177,6 +181,16 @@
       integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
       crossorigin="anonymous"
     ></script>
+
+    <!-- Include the Quill library -->
+    <script src="https://cdn.quilljs.com/1.3.6/quill.js"></script>
+
+    <!-- Initialize Quill editor -->
+    <script>
+      var quill = new Quill('#editor', {
+        theme: 'bubble',
+      });
+    </script>
 
     <!-- Scripts should be placed here to prevent blocking render UI -->
     <script type="module" src="js/post-detail.js"></script>
