--- a/index.html
+++ b/index.html
@@ -138,40 +138,36 @@
             </div>
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <div class="carousel-ratio">
-                  <img
-                    src="https://picsum.photos/id/1000/1378/400"
-                    class="d-block w-100"
-                    alt="First picture"
-                  />
-                </div>
+                <img
+                  src="https://picsum.photos/id/1000/1378/400"
+                  class="d-block w-100"
+                  alt="..."
+                  style="min-height: 20vh"
+                />
                 <div class="carousel-caption d-none d-md-block">
                   <h5>First slide label</h5>
                   <p>Some representative placeholder content for the first slide.</p>
                 </div>
               </div>
               <div class="carousel-item">
-                <!-- Custom class which helps CLS rating -->
-                <div class="carousel-ratio">
-                  <img
-                    src="https://picsum.photos/id/100/1378/400"
-                    class="d-block w-100"
-                    alt="Second picture"
-                  />
-                </div>
+                <img
+                  src="https://picsum.photos/id/100/1378/400"
+                  class="d-block w-100"
+                  alt="..."
+                  style="min-height: 20vh"
+                />
                 <div class="carousel-caption d-none d-md-block">
                   <h5>Second slide label</h5>
                   <p>Some representative placeholder content for the second slide.</p>
                 </div>
               </div>
               <div class="carousel-item">
-                <div class="carousel-ratio">
-                  <img
-                    src="https://picsum.photos/id/1004/1378/400"
-                    class="d-block w-100"
-                    alt="Third picture"
-                  />
-                </div>
+                <img
+                  src="https://picsum.photos/id/1004/1378/400"
+                  class="d-block w-100"
+                  alt="..."
+                  style="min-height: 20vh"
+                />
                 <div class="carousel-caption d-none d-md-block">
                   <h5>Third slide label</h5>
                   <p>Some representative placeholder content for the third slide.</p>
