--- a/add-edit-post.html
+++ b/add-edit-post.html
@@ -173,13 +173,17 @@
 
     <footer class="text-center text-muted py-3">
       <small
-        >Created by <a href="https://github.com/duy123a/moonside" target="_blank">duy123a</a> with
-        <i class="fas fa-heart"></i
+        >Created by
+        <a href="https://github.com/duy123a/moonside" target="_blank" rel="noreferrer">duy123a</a>
+        with <i class="fas fa-heart"></i
       ></small>
       <br />
       <small
         >Content is available under
-        <a href="https://creativecommons.org/licenses/by-nc-sa/4.0/" target="_blank"
+        <a
+          href="https://creativecommons.org/licenses/by-nc-sa/4.0/"
+          target="_blank"
+          rel="noreferrer"
           >Creative Commons Attribution-NonCommercial-ShareAlike</a
         >
         unless otherwise noted.</small
